--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/2204d85ae9.js" crossorigin="anonymous"></script>
     <title>Frontend Mentor | Ping coming soon page</title>
   </head>
   <body>
-    We are launching soon! Subscribe and get notified Notify Me &copy; Copyright Ping. All rights reserved.
+    <div class="container">
+      <header>
+        <img src="images/logo.svg" alt="" />
+      </header>
+
+      <main>
+        <h1>We are launching <span class="bold">soon!</span></h1>
+        <p>Subscribe and get notified</p>
+
+        <div class="input-container">
+          <input type="email" />
+          <input type="submit" value="Notify Me" />
+        </div>
+
+        <img src="images/illustration-dashboard.png" alt="" />
+      </main>
+
+      <footer>
+        <div class="social-links">
+          <a href="#"><span class="sr-only">Facebook link</span><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><span class="sr-only">Twitter link</span><i class="fab fa-twitter"></i></a>
+          <a href="#"><span class="sr-only">Instagram link</span><i class="fab fa-instagram"></i></a>
+        </div>
+        <p>&copy; Copyright Ping. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
